# projekt-group18-logic-legends

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Makefile  assignRemove.c  assignRemove.h  csv_util.c  csv_util.h  main  main.c  main.h  output_file  patient_utils.c  patient_utils.h  seatingAlgorithm.c
test/: testassignremove.cpp
